add sections to main

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
     </header>
 
     <main>
+        <section id="aboutMe">
 
+        </section>
+
+        <section id="projects">
+
+        </section>
+
+        <section id="skills">
+
+        </section>
+
+        <section id="contactMe">
+
+        </section>
     </main>
 
     <footer>
