--- a/index.html
+++ b/index.html
@@ -24,14 +24,48 @@
 
     <main>
         <section id="aboutMe">
+            <div>
+                <h1>About me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, eum maxime, suscipit aspernatur laudantium porro, deleniti ipsum possimus deserunt quas illo doloribus dolorum explicabo laborum esse fugiat recusandae tenetur harum?</p>
+            </div>
+            <div>
+                <img src="img/sarah-sw-k.png" alt="Portrait of Sarah Buehler" width="200px">
+            </div>
+
 
         </section>
 
         <section id="projects">
+            <h1>Projects</h1>
+            <ul>
+                <li>
+                    <h2>Project 1</h2>
+                </li>
+                <li>
+                    <h2>Project 2</h2>
+                </li>
+                <li>
+                    <h2>Project 3</h2>
+                </li>
+            </ul>
 
         </section>
 
         <section id="skills">
+            <h1>Skills</h1>
+            <div>
+                <img src="img/128/html-5.png" alt="HTML5 logo">
+                <div class="rating">
+                    <img src="img/128/star-yellow.png" alt="" width="40px">
+                    <img src="img/128/star-yellow.png" alt="" width="40px">
+                    <img src="img/128/star-yellow.png" alt="" width="40px">
+                    <img src="img/128/star-yellow.png" alt="" width="40px">
+                    <img src="img/128/star-blanc.png" alt="" width="40px">
+                </div>
+
+
+            </div>
+
 
         </section>
 
