add styles and infos

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 </head>
 
 <body>
-    <header>
+    <header class="eightypercent gray">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutMe">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#accounts">Accounts</a></li>
                 <li><a href="#contactMe">Contact me</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="aboutMe">
+        <section id="aboutMe" class="eightypercent">
             <div>
                 <h1>About me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, eum maxime, suscipit aspernatur laudantium porro, deleniti ipsum possimus deserunt quas illo doloribus dolorum explicabo laborum esse fugiat recusandae tenetur harum?</p>
@@ -35,9 +36,9 @@
 
         </section>
 
-        <section id="projects">
+        <section id="projects" class="eightypercent gray">
             <h1>Projects</h1>
-            <ul>
+            <ol>
                 <li>
                     <h2>Project 1</h2>
                 </li>
@@ -47,35 +48,81 @@
                 <li>
                     <h2>Project 3</h2>
                 </li>
-            </ul>
+            </ol>
 
         </section>
 
-        <section id="skills">
-            <h1>Skills</h1>
+        <section id="skills" class="eightypercent">
             <div>
-                <img src="img/128/html-5.png" alt="HTML5 logo">
-                <div class="rating">
-                    <img src="img/128/star-yellow.png" alt="" width="40px">
-                    <img src="img/128/star-yellow.png" alt="" width="40px">
-                    <img src="img/128/star-yellow.png" alt="" width="40px">
-                    <img src="img/128/star-yellow.png" alt="" width="40px">
-                    <img src="img/128/star-blanc.png" alt="" width="40px">
+                <h1>Skills</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, nihil tempora nam cumque vitae assumenda deserunt, sit, sequi saepe obcaecati quos necessitatibus. Nostrum expedita eum cum ratione. Enim, eaque iusto?
+                </p>
+            </div>
+            <div class="wrapper">
+                <div class="container">
+                    <img src="img/128/html-5.png" alt="HTML5 logo">
+                    <div class="rating">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                    </div>
                 </div>
 
+                <div class="container">
+                    <img src="img/128/css-3.png" alt="CSS3 logo">
+                    <div class="rating">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="img/128/js.png" alt="Javascript logo">
+                    <div class="rating">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                    </div>
+                </div>
+                <div class="container">
+                    <img src="img/128/Git-Icon-1788C.png" alt="Git logo" width="128px">
+                    <div class="rating">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-yellow.png" alt="Yellow star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                        <img src="img/128/star-blanc.png" alt="Blanc star" width="40px">
+                    </div>
+                </div>
+        </section>
+        <section id="accounts" class="gray eightypercent">
+            <div>
+                <h1>Accounts</h1>
+            </div>
+            <div class="wrapper">
+                <div>
+                    <a href="https://www.codecademy.com/profiles/SarahBuehler"><img src="img/128/codecademy.png" alt="Codecademy logo"></a>
 
+                </div>
             </div>
 
 
         </section>
 
-        <section id="contactMe">
-
+        <section id="contactMe" class="eightypercent">
+            <h1>Contact me</h1>
         </section>
     </main>
 
-    <footer>
-
+    <footer class="gray eightypercent">
+        <p>&#169; by Sarah Bühler</p>
     </footer>
 
 </body>
