--- a/index.html
+++ b/index.html
@@ -107,13 +107,16 @@
                 <h1>Accounts</h1>
             </div>
             <div class="wrapper">
-                <div>
-                    <a href="https://www.codecademy.com/profiles/SarahBuehler"><img src="img/128/codecademy.png" alt="Codecademy logo"></a>
-
+                <div class="accountsImg">
+                    <a href="https://www.codecademy.com/profiles/SarahBuehler"><img src="img/128/codecademy.png" alt="Codecademy logo and link to profile"></a>
+                </div>
+                <div class="accountsImg">
+                    <a href="https://github.com/SarahBuehler"><img src="img/128/github-logo.png" alt="GitHub logo and link to profile"></a>
+                </div>
+                <div class="accountsImg">
+                    <a href="https://www.linkedin.com/in/sarah-b%C3%BChler-1b1345195/"><img src="img/128/linkedin-logo.png" alt="Linkedin logo and link to profile"></a>
                 </div>
             </div>
-
-
         </section>
 
         <section id="contactMe" class="eightypercent">
