--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, eum maxime, suscipit aspernatur laudantium porro, deleniti ipsum possimus deserunt quas illo doloribus dolorum explicabo laborum esse fugiat recusandae tenetur harum?</p>
                 </div>
                 <div>
-                    <img src="img/sarah-sw-k.png" alt="Portrait of Sarah Buehler" width="200px">
+                    <img src="img/sarah-sw-small.png" alt="Portrait of Sarah Buehler" width="200px">
                 </div>
             </div>
         </section>
